grafana-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: "nginx"
  rules:
    - http:
        paths:
          # Web UI 路径
          - path: /monitoring/grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
