monitoring-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: "nginx"
  rules:
    - host: grafana.somebody.icu
      http:
          paths:
            # Web UI 路径
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: grafana
                  port:
                    number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  ingressClassName: "nginx"
  rules:
    - host: prometheus.somebody.icu
      http:
          paths:
            # Web UI 路径
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: prometheus-k8s
                  port:
                    number: 9090
